fix bio section text alignment

--- a/style.css
+++ b/style.css
@@ -252,21 +252,30 @@ text-shadow: 1px 1px 0px #fff;
   margin: 0 auto;
   justify-content: space-between;
   width: 90%;
-  height: 100vh;
+   padding-bottom: 2em;
 }
 #contactLeft{
-  padding-left: 2em;
-  padding-top: 6.5em;
+  /*padding-left: 2em;*/
+  padding-top: 4.5em;
   width: 50%;
 }
 #teaching {
   float: left;
-  margin-right: 1em;
+  margin-right: 1.5em;
+  padding-top: 1em;
+  margin-left: -0.25em;
+
+}
+#teaching figcaption {
+  font-size: 0.75em;
+  font-style: italic;
+  text-align: center;
 }
 
 #contactRight{
   padding-top: 6.5em;
 }
+
 
 /*   ====== FOOTER ======== */
 footer a{
